bug fix: header not visible on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app-container {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   position: relative;
   z-index: 1;
   padding: 1.5rem;
